<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/general_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"
        app:title="Search News"/>

    <LinearLayout
        android:id="@+id/search_global_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_query_term"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/search_two_columns_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">

            <FrameLayout
                android:id="@+id/search_left_column_frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <LinearLayout
                    android:id="@+id/search_left_column_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/search_button_beginDate"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        >

                        <TextView
                            android:id="@+id/search_beginDate_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_begin"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:id="@+id/search_beginDate_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/date_begin_numbers"/>

                    </LinearLayout>

                        <CheckBox
                            android:id="@+id/search_checkBox_arts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_arts"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:onClick="onCheckboxClicked"
                            />

                        <CheckBox
                            android:id="@+id/search_checkBox_business"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_business"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:onClick="onCheckboxClicked"
                            />

                        <CheckBox
                            android:id="@+id/search_checkBox_entrepeneurs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_entrepreneurs"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:onClick="onCheckboxClicked"
                            />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/search_right_column_frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <LinearLayout
                    android:id="@+id/search_right_column_linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/search_button_endDate"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp">

                        <TextView
                            android:id="@+id/search_endDate_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_end"
                            android:textStyle="bold"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:id="@+id/search_endDate_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/date_end_numbers"/>

                    </LinearLayout>

                        <CheckBox
                            android:id="@+id/search_checkBox_politics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_politics"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:onClick="onCheckboxClicked"
                            />

                        <CheckBox
                            android:id="@+id/search_checkBox_sports"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_sports"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:onClick="onCheckboxClicked"
                            />

                        <CheckBox
                            android:id="@+id/search_checkBox_travel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cb_travel"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:onClick="onCheckboxClicked"
                            />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout> <!-- two columns -->

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/progress_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <ProgressBar
                android:id="@+id/search_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:padding="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Searching articles. Please wait..."/>
        </LinearLayout>



    </LinearLayout> <!-- global (after toolbar) -->

</LinearLayout> <!-- general -->