<resources>
    <string name="app_name">My News</string>

    <string name="go_back" >Go back</string>

    <!-- MAIN ACTIVITY STRINGS -->

    <string name="top_stories_tag"> TOP STORIES </string>
    <string name="most_popular_tag"> MOST POPULAR </string>
    <string name="business_tag"> BUSINESS </string>
...
    <!-- SEARCH ARTICLES ACTIVITY STRINGS -->

    <string name="search_articles_toast_choose_one_category"> You have to choose at least one category </string>
    <string name="search_articles_toast_end_and_begin_dates"> End Date must be after the Begin Date </string>
    <string name="search_articles_toast_end_and_today_dates"> End Date can\'t be after today </string>

    <string name="home_button_search_activity_content_description"> HomeButtonSearchActivity </string>


    <!-- ABOUT SECTION STRINGS-->

    <string name="developed_by">
        Developed by DF Development.
...
